--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "test": "mocha -w ./tests/*/.spec.js"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
